[tool.poetry]
name = "llama_index_data_pipeline"
version = "0.1.0"
description = ""
authors = ["Peter Landis"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.30.2"
llama-index-embeddings-openai = "^0.1.10"
ipykernel = "^6.29.4"
llama-index = "^0.10.38"
llama-index-embeddings-huggingface = "^0.2.0"
chromadb = "^0.5.0"
llama-index-vector-stores-chroma = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
